# otto

./: README.md  main.py  pyproject.toml  test.py
cursed/: cursed.py  recorder.py
